5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1716_2505.log
== TEST (2019-05-14 16:38:44) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador k<5)
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	

-- ERROR:
File "XXXX", line 9
    while(contador k<5)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:01) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador k):
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	

-- ERROR:
File "XXXX", line 9
    while(contador k):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:15) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador <k):
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    cont=cont+1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:36) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador <k):
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(soma, 10))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    cont=cont+1
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:04) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador <k):
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	contador=contador+1
print(round(soma, 10))	

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:18) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("valor de x: "))
k=int(input("valor de k: "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador <k):
	soma=soma+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	contador=contador+1
print(round(soma, 10))	

-- EXECUTION TIME:
0.120775
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
